# Quick-Start-FastAPI-Easy

./: README.md  TestTask.md  pyproject.toml
app/api/endpoints/: users.py
app/api/schemas/: user.py
app/core/: config.py
